<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/title_first_section">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="checkbox_preference"
            android:title="@string/title_checkbox_preference" />
        <EditTextPreference
            android:dialogTitle="@string/hello_world"
            android:key="edittext_preference"
            android:summary="@string/summary_editext_preference"
            android:title="@string/title_edittext_preference" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/title_second_section">
        <ListPreference
            android:dialogTitle="@string/title_list_preference"
            android:entries="@array/entries_list_preference"
            android:entryValues="@array/entryValues_list_preference"
            android:key="list_preference"
            android:title="@string/title_list_preference" />

        <Preference android:title="@string/title_preference">
            <intent
                android:action="android.intent.action.view"
                android:data="https://www.baidu.com" />


        </Preference>

    </PreferenceCategory>

</PreferenceScreen>